
syntax = "proto3";

package productandservice_app_package;

service productandservice {
    rpc getPricedItems (items) returns (responseItems) {}
  
}

message item {
    string categoryId = 1 ;
    string serviceId  = 2 ;
    string productId  = 3 ;
}

message items {
    repeated item items = 1 ;
}

message responseItem {
    string categoryId    = 1 ;
    string serviceId     = 2 ;
    string productId     = 3 ;
    string categoryPrice = 4 ;
    string servicePrice  = 5 ;
    string productPrice  = 6 ;
    string totalPrice    = 7 ;
}

message responseItems {
    repeated responseItem responseItems = 1 ;
}

